# dotfiles

./: .Xdracula  .Xresources  .bashrc  .xinitrc  .xmobarrc  README.md  fix-nvidia.sh  install-xmonad.sh  limine.conf  packages.sh  xmonad.hs
.Xresources.d/: night-owl
.config/: stalonetrayrc  starship.toml
.config/alacritty/: alacritty.toml
.config/alacritty/themes/: night-owl.toml  nord.toml
.config/xmonad/: xmobar-night-owl.hs  xmobar.hs  xmonad.hs
.xmonad/: CHANGELOG.md  xmonad-zetos.cabal  xmonad.hs
arco/: autostart.sh  xmonad.hs
owl/: .Xresources  .xmobarrc  xmonad.hs
scripts/: install-packages.sh  install-xmonad-dependencies.sh  install-xmonad.sh  packages.sh  setup-docker.sh
