cabal-version:      3.0
name:               xmonad-zetos

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
synopsis:           zetos xmonad configuration.
license:            MIT
license-file:       LICENSE
author:             Zetos Lima
maintainer:         cesar_manoel@hotmail.com
category:           Desktop
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable xmonad-zetos
    -- Import common warning flags.
    --import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          xmonad.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.20.0.0
                    , xmonad >= 0.18
                    , xmonad-contrib >= 0.18
                    , containers >= 0.7
                    , X11 >= 1.10.3

    -- Base language which the package is written in.
    default-language: GHC2021
